--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -55,7 +55,7 @@
             {{else}}
                 <p>
                     You don't have access to this post at the moment,
-                    but if you upgrade your account you'll be able to see the whole thing,
+                    but if you subscribe (it's free!) you'll be able to see the whole thing,
                     as well as all the other posts in the archive! Subscribing will give you immediate access.
                 </p>
                 <section class="single-cta">
